--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="#">Spring Crypto Utils</a>
+            <a class="brand" href="index.html">Spring Crypto Utils</a>
 
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#docs">Documentation</a></li>
-                    <li><a href="#download">Download</a></li>
-                    <li><a href="#source">Source</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="documentation.html">Documentation</a></li>
+                    <li><a href="https://github.com/mcaserta/spring-crypto-utils/downloads">Download</a></li>
+                    <li><a href="https://github.com/mcaserta/spring-crypto-utils">Source</a></li>
                 </ul>
             </div>
         </div>
@@ -58,7 +58,7 @@
         <p>Cryptography in Java sucks, badly. That's why we make cryptography tools that are a snap to
             configure and use.</p>
 
-        <p><a class="btn btn-large btn-primary">Start here</a></p>
+        <p><a class="btn btn-large btn-primary" href="documentation.html">Start here</a></p>
     </div>
 
     <div class="row">
