Work in progress

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <p>We provide wrappers around the Java Cryptography API so that configuration and use
                 of a bunch of tools can be done the same easy way you are already accustomed to work in your
                 applications using Spring. </p>
+            
         </div>
         <div class="span4">
             <h2>Complete</h2>
@@ -81,6 +82,8 @@
                 <li>symmetric and asymmetric encryption</li>
                 <li>message and mac digesters</li>
             </ul>
+
+            <p>Not to mention the documentation is so sexy you'll want to lick it. </p>
         </div>
         <div class="span4">
             <h2>Proven</h2>
