Work still in progress.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"/>
     <![endif]-->
 
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 60px;
@@ -40,8 +40,7 @@
                 <ul class="nav">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="documentation.html">Documentation</a></li>
-                    <li><a href="https://github.com/mcaserta/spring-crypto-utils/downloads">Download</a></li>
-                    <li><a href="https://github.com/mcaserta/spring-crypto-utils">Source</a></li>
+                    <li><a href="https://github.com/mcaserta/spring-crypto-utils">GitHub</a></li>
                 </ul>
             </div>
         </div>
@@ -55,8 +54,7 @@
 
         <h1>Spring Crypto Utils</h1>
 
-        <p>Cryptography in Java sucks, badly. That's why we make cryptography tools that are a snap to
-            configure and use.</p>
+        <p>Cryptography in Java sucks, badly. Hopefully, not any more.</p>
 
         <p><a class="btn btn-large btn-primary" href="documentation.html">Start here</a></p>
     </div>
@@ -65,10 +63,10 @@
         <div class="span4">
             <h2>Simple</h2>
 
-            <p>We provide wrappers around the Java Cryptography API so that configuration and use
-                of a bunch of tools can be done the same easy way you are already accustomed to work in your
-                applications using Spring. </p>
-            
+            <p>We provide wrappers around the Java Cryptography API. Using JCA
+                goes from &laquo;I want to kill myself&raquo; to &laquo;Hey, this is actually pretty cool!&raquo;</p>
+
+            <p>Not to mention the documentation's so sexy you'll wanna lick it.</p>
         </div>
         <div class="span4">
             <h2>Complete</h2>
@@ -78,12 +76,11 @@
             <ul>
                 <li>key stores</li>
                 <li>public and private keys</li>
-                <li>signers and verifiers</li>
+                <li>digital signatures</li>
                 <li>symmetric and asymmetric encryption</li>
-                <li>message and mac digesters</li>
+                <li>message digesters</li>
             </ul>
 
-            <p>Not to mention the documentation is so sexy you'll want to lick it. </p>
         </div>
         <div class="span4">
             <h2>Proven</h2>
@@ -96,17 +93,13 @@
 
     <hr>
 
-    <footer>
-        <p>&copy; Mirko Caserta 2012. The Spring Framework is &copy; <a href="http://www.springsource.org/"
-                                                                        target="_blank">SpringSource</a>. Full
-            disclosure: we are in no way affiliated to SpringSource: we just use their open source products everyday and
-            we think they're awesome and you should use them too. </p>
-    </footer>
+<footer><p> &copy; <a href="https://twitter.com/#!/mirkocaserta">Mirko Caserta</a> 2012. Licensed under the Apache
+    License, Version 2.0. The Spring Framework is &copy; SpringSource. </p></footer>
 
 </div>
 
 <script src="js/jquery.js" type="text/javascript"></script>
-<script src="js/bootstrap.js" type="text/javascript"></script>
+<script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 </body>
 </html>
