--- a/documentation.html
+++ b/documentation.html
@@ -19,6 +19,7 @@
     </style>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
 
     <!-- TODO: fix these icons
     <link rel="shortcut icon" href="img/favicon.ico">
