Things are taking shape

--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>Spring Crypto Utils - Homepage</title>
-
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"/>
-    <![endif]-->
-
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body {
@@ -17,14 +12,8 @@
     </style>
     <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=PT+Mono' rel='stylesheet' type='text/css'>
-
-    <!-- TODO: fix these icons
+    <link href="http://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-     -->
 </head>
 
 <body>
@@ -96,8 +85,9 @@
 
     <hr>
 
-<footer><p> &copy; <a href="https://twitter.com/#!/mirkocaserta">Mirko Caserta</a> 2012. Licensed under the Apache
-    License, Version 2.0. The Spring Framework is &copy; SpringSource. </p></footer>
+    <footer><p> &copy; <a href="https://twitter.com/#!/mirkocaserta">Mirko
+        Caserta</a> 2012. Licensed under the Apache License, Version 2.0. The Spring
+        Framework is &copy; SpringSource. </p></footer>
 
 </div>
 
