--- a/documentation.html
+++ b/documentation.html
@@ -36,6 +36,8 @@
                     <li><a href="index.html">Home</a></li>
                     <li class="active"><a
                             href="documentation.html">Documentation</a></li>
+                    <li><a href="documentation.html#changelog">ChangeLog</a></li>
+                    <li><a href="documentation.html#roadmap">RoadMap</a></li>
                     <li><a href="https://github.com/mcaserta/spring-crypto-utils">GitHub</a></li>
                 </ul>
             </div>
@@ -62,8 +64,6 @@
             <li><a href="#asymmetric">Asymm</a></li>
             <li><a href="#digest">Digest</a></li>
             <li><a href="#mac">Mac</a></li>
-            <li><a href="#changelog">ChangeLog</a></li>
-            <li><a href="#roadmap">RoadMap</a></li>
         </ul>
     </div>
 </header>
