--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <ul class="nav">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="documentation.html">Documentation</a></li>
+                    <li><a href="documentation.html#changelog">ChangeLog</a></li>
+                    <li><a href="documentation.html#roadmap">RoadMap</a></li>
                     <li><a href="https://github.com/mcaserta/spring-crypto-utils">GitHub</a></li>
                 </ul>
             </div>
