Trying the jekyll way.

--- a/documentation.html
+++ b/documentation.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Spring Crypto Utils - Documentation</title>
-    <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet">
-    <link href="css/docs.css" type="text/css" rel="stylesheet">
-    <link href="css/prettify.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/docs.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/prettify.css" type="text/css" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 60px;
