--- a/index.html
+++ b/index.html
@@ -1,50 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Spring Crypto Utils - Homepage</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <style type="text/css">
-        body {
-            padding-top: 60px;
-            padding-bottom: 40px;
-        }
-    </style>
-    <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet" type="text/css">
-    <link rel="shortcut icon" href="img/favicon.ico">
-</head>
-
-<body>
-
-<div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="brand" href="index.html">Spring Crypto Utils</a>
-
-            <div class="nav-collapse">
-                <ul class="nav">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="documentation.html">Documentation</a></li>
-                    <li><a href="documentation.html#changelog">ChangeLog</a></li>
-                    <li><a href="documentation.html#roadmap">RoadMap</a></li>
-                    <li><a href="https://github.com/mcaserta/spring-crypto-utils">GitHub</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="container">
-
+---
+layout: default
+title: Homepage
+navbar:
+  active_item: home
+---
     <div class="hero-unit">
-        <img src="img/lock.png" style="float: right;" height="297" width="264"/>
+        <img src="assets/img/lock.png" style="float: right;" height="297" width="264" alt="lock icon"/>
 
         <h1>Spring Crypto Utils</h1>
 
@@ -84,17 +45,3 @@
                 what we do.</p>
         </div>
     </div>
-
-    <hr>
-
-    <footer><p> &copy; <a href="https://twitter.com/#!/mirkocaserta">Mirko
-        Caserta</a> 2012. Licensed under the Apache License, Version 2.0. The Spring
-        Framework is &copy; SpringSource. </p></footer>
-
-</div>
-
-<script src="js/jquery.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-</body>
-</html>
