Work in progress

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ navbar:
             <p>We provide wrappers around the Java Cryptography API. Using JCA
                 goes from &laquo;I want to kill myself&raquo; to &laquo;Hey, this is actually pretty cool!&raquo;</p>
 
-            <p>Not to mention the documentation's so sexy you'll wanna lick it.</p>
+            <p>Not to mention the sexy documentation.</p>
         </div>
         <div class="span4">
             <h2>Complete</h2>
@@ -31,6 +31,7 @@ navbar:
             <ul>
                 <li>key stores</li>
                 <li>public and private keys</li>
+                <li>certificates</li>
                 <li>digital signatures</li>
                 <li>symmetric and asymmetric encryption</li>
                 <li>message digesters</li>
