Updated roadmap and setup

--- a/setup.html
+++ b/setup.html
@@ -25,7 +25,7 @@ navbar:
 &lt;dependency&gt;
     &lt;groupId&gt;com.google.code.spring-crypto-utils&lt;/groupId&gt;
     &lt;artifactId&gt;spring-crypto-utils&lt;/artifactId&gt;
-    &lt;version&gt;1.1.1&lt;/version&gt;
+    &lt;version&gt;1.2.0&lt;/version&gt;
 &lt;/dependency&gt;</pre>
 
         <div class="alert alert-info">
@@ -39,8 +39,8 @@ navbar:
 
         <h2>Without maven</h2>
 
-        <p>Download the latest jar from the download page and put the file in the classpath of your
-            application.</p>
+        <p>Download <a href="http://repo1.maven.org/maven2/com/google/code/spring-crypto-utils/spring-crypto-utils/1.2.0/spring-crypto-utils-1.2.0.jar">the latest jar</a>
+            and put the file in the classpath of your application.</p>
 
         <p>The following jars are also needed:</p>
 
