Changes for release 1.3.0

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ navbar:
 
         <p>Cryptography in Java sucks, badly. Hopefully, not any more.</p>
 
-        <p><a class="btn btn-large btn-primary" href="documentation.html">Start here</a></p>
+        <p><a class="btn btn-large btn-primary" href="setup.html">Start here</a></p>
     </div>
 
     <div class="row">
@@ -35,6 +35,7 @@ navbar:
                 <li>digital signatures</li>
                 <li>symmetric and asymmetric encryption</li>
                 <li>message digesters</li>
+                <li>custom providers</li>
             </ul>
 
         </div>
