--- a/keystore.html
+++ b/keystore.html
@@ -27,10 +27,11 @@ navbar:
 
         <div class="tab-content">
             <div class="tab-pane active" id="keystore-simple">
-                <p>To get a reference to a keystore, use the <code>&lt;crypt:keystore&gt;</code> element:</p>
+                <p>To get a reference to a <code>java.security.Keystore</code>, use the 
+                    <code>&lt;crypt:keystore&gt;</code> element:</p>
 
                     <pre class="prettyprint">&lt;crypt:keystore id="fooKeystore" location="classpath:keystore-foo.jks"
-    password="password" type="JKS"/&gt;</pre>
+    password="password" type="JKS" provider="SUN"/&gt;</pre>
 
                 <div class="alert alert-info">
                     <h4 class="alert-heading">type</h4>
@@ -44,6 +45,11 @@ navbar:
                     5.1 in the <a
                         href="http://static.springsource.org/spring/docs/3.1.x/spring-framework-reference/html/resources.html#resources-resourceloader"
                         target="_blank">spring reference documentation</a> for an overview)
+                </div>
+
+                <div class="alert alert-info">
+                    <h4 class="alert-heading">provider <span class="label">since 1.3.0</span></h4>
+                    The <code>provider</code> attribute is optional.
                 </div>
             </div>
             <div class="tab-pane" id="keystore-default">
@@ -59,7 +65,8 @@ navbar:
             </div>
             <div class="tab-pane" id="keystore-b64">
                 <p>A keystore can also be embedded in the xml config file itself using the base64 encoding:</p>
-<pre class="prettyprint">&lt;crypt:b64Keystore id="keystore" password="password" type="JKS"&gt;
+<pre class="prettyprint">&lt;crypt:b64Keystore id="keystore" password="password" type="JKS"
+                   provider="SUN"&gt;
     &lt;crypt:file&gt;
         /u3+7QAAAAIAAAABAAAAAQAEdGVzdAAAASazcnA7AAACvTCCArkwDgYKKwYBBAEq
         AhEBAQUABIICpXWgVfoBjEXhW7TUr4i8npIcnRfWKy8i5Mly28DaiNQIcbUmqVol
@@ -92,7 +99,18 @@ navbar:
     &lt;/crypt:file&gt;
 &lt;/crypt:b64Keystore&gt;</pre>
 
-                <p>The Base64 block above was generated with:</p>
+                <div class="alert alert-info">
+                    <h4 class="alert-heading">type</h4>
+                    The <code>type</code> attribute is optional: <code>JKS</code> is the default keystore type if no
+                    <code>type</code> attribute is specified.
+                </div>
+
+                <div class="alert alert-info">
+                    <h4 class="alert-heading">provider <span class="label">since 1.3.0</span></h4>
+                    The <code>provider</code> attribute is optional.
+                </div>
+
+               <p>The Base64 block above was generated with:</p>
 
                 <pre class="prettyprint lang-sh">$ openssl enc -base64 -in keystore.jks</pre>
             </div>
