--- a/signature-s.html
+++ b/signature-s.html
@@ -34,7 +34,7 @@ navbar:
                 <p>A simple signer is useful when you need to sign something with a single private key.</p>
 
 <pre class="prettyprint"><strong>&lt;crypt:signer id="signer" privateKey-ref="privateKey"
-    algorithm="SHA1withRSA"/&gt;</strong>
+    algorithm="SHA1withRSA" provider="BC"/&gt;</strong>
 
 &lt;crypt:privateKey id="privateKey" keystore-ref="keystore" alias="test"
     password="password"/&gt;
@@ -48,10 +48,15 @@ navbar:
                     <code>SHA1withRSA</code> is the default algorithm and can be omitted.
                 </div>
 
+                <div class="alert alert-info">
+                    <h4 class="alert-heading">provider <span class="label">since 1.3.0</span></h4>
+                    The <code>provider</code> attribute is optional.
+                </div>
+
                 <p>The signer can then be used like this:</p>
 
 <pre class="prettyprint">
-<strong>import com.google.code.springcryptoutils.core.signature.Signer;</strong>
+<strong>import com.springcryptoutils.core.signature.Signer;</strong>
 
 public class MyPaymentSigner {
 
@@ -72,7 +77,7 @@ public class MyPaymentSigner {
                     version of such data, there is also a base64 version of the signer.</p>
 
 <pre class="prettyprint"><strong>&lt;crypt:b64Signer id="signer" privateKey-ref="privateKey"
-    algorithm="SHA1withRSA"/&gt;</strong>
+    algorithm="SHA1withRSA" provider="BC"/&gt;</strong>
 
 &lt;crypt:privateKey id="privateKey" keystore-ref="keystore" alias="test"
     password="password"/&gt;
@@ -86,10 +91,15 @@ public class MyPaymentSigner {
                     <code>SHA1withRSA</code> is the default algorithm and can be omitted.
                 </div>
 
+                <div class="alert alert-info">
+                    <h4 class="alert-heading">provider <span class="label">since 1.3.0</span></h4>
+                    The <code>provider</code> attribute is optional.
+                </div>
+
                 <p>And this is how you use it:</p>
 
 <pre class="prettyprint">
-<strong>import com.google.code.springcryptoutils.core.signature.Base64EncodedSigner;</strong>
+<strong>import com.springcryptoutils.core.signature.Base64EncodedSigner;</strong>
 
 public class MyBase64PaymentSigner {
 
@@ -106,7 +116,8 @@ public class MyBase64PaymentSigner {
             <div class="tab-pane" id="verifier">
                 <p>A simple verifier is useful when you need to verify something with a single public key.</p>
 
-<pre class="prettyprint"><strong>&lt;crypt:verifier id="verifier" publicKey-ref="publicKey" algorithm="SHA1withRSA"/&gt;</strong>
+<pre class="prettyprint"><strong>&lt;crypt:verifier id="verifier" publicKey-ref="publicKey" 
+                algorithm="SHA1withRSA" provider="BC"/&gt;</strong>
 
 &lt;crypt:publicKey id="publicKey" keystore-ref="keystore" alias="test"/&gt;
 
@@ -119,10 +130,15 @@ public class MyBase64PaymentSigner {
                     <code>SHA1withRSA</code> is the default algorithm and can be omitted.
                 </div>
 
+                <div class="alert alert-info">
+                    <h4 class="alert-heading">provider <span class="label">since 1.3.0</span></h4>
+                    The <code>provider</code> attribute is optional.
+                </div>
+
                 <p>Here is an example usage of the verifier:</p>
 
 <pre class="prettyprint">
-<strong>import com.google.code.springcryptoutils.core.signature.Verifier;</strong>
+<strong>import com.springcryptoutils.core.signature.Verifier;</strong>
 
 public class MyPaymentVerifier {
 
@@ -145,7 +161,7 @@ public class MyPaymentVerifier {
                     version of such data, there is also a base64 version of the signer.</p>
 
 <pre class="prettyprint"><strong>&lt;crypt:b64Verifier id="verifier" publicKey-ref="publicKey"
-    algorithm="SHA1withRSA"/&gt;</strong>
+    algorithm="SHA1withRSA" provider="BC"/&gt;</strong>
 
 &lt;crypt:publicKey id="publicKey" keystore-ref="keystore" alias="test"/&gt;
 
@@ -158,10 +174,15 @@ public class MyPaymentVerifier {
                     <code>SHA1withRSA</code> is the default algorithm and can be omitted.
                 </div>
 
+                <div class="alert alert-info">
+                    <h4 class="alert-heading">provider <span class="label">since 1.3.0</span></h4>
+                    The <code>provider</code> attribute is optional.
+                </div>
+
                 <p>Here is an example usage of the base64 verifier:</p>
 
 <pre class="prettyprint">
-<strong>import com.google.code.springcryptoutils.core.signature.Base64EncodedVerifier;</strong>
+<strong>import com.springcryptoutils.core.signature.Base64EncodedVerifier;</strong>
 
 public class VaderVerifier {
 
