--- a/documentation.html
+++ b/documentation.html
@@ -796,7 +796,7 @@ public class MyBusinessVerifier {
         <div class="span3 columns">
             <h3>Asymmetric Encryption</h3>
 
-            <p>Asymmetric Encryption employs key couples in order to exchange messages securely.</p>
+            <p>Asymmetric Encryption employs key pairs in order to exchange messages securely.</p>
         </div>
 
         <div class="span9 columns">
