--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ navbar:
             <p>We provide wrappers around the Java Cryptography API. Using JCA
                 goes from &laquo;I want to kill myself&raquo; to &laquo;Hey, this is actually pretty cool!&raquo;</p>
 
-            <p>Not to mention the sexy documentation.</p>
+            <p>Not to mention the sexy documentation and the extensive unit tests.</p>
         </div>
         <div class="span4">
             <h2>Complete</h2>
@@ -29,12 +29,15 @@ navbar:
             <p>Support for wiring and using all of the stuff cryptography usually requires is built in:</p>
 
             <ul>
-                <li>key stores</li>
-                <li>public and private keys</li>
-                <li>certificates</li>
-                <li>digital signatures</li>
-                <li>symmetric and asymmetric encryption</li>
-                <li>message digesters</li>
+                <li><a href="keystore.html" title="Key stores">key stores</a></li>
+                <li><a href="key.html" title="Public, Private and Secret Keys">public, private and secret keys</a></li>
+                <!--<li>certificates</li>-->
+                <li>digital signatures with <a href="signature-s.html" title="Digital Signatures with Single Keys">single</a> and
+                    <a href="signature-m.html" title="Digital Signatures with Multiple Keys">multiple keys</a></li>
+                <li><a href="symmetric-encryption.html" title="Symmetric Encryption">symmetric</a> and
+                    <a href="asymmetric-encryption.html" title="Asymmetric Encryption">asymmetric encryption</a></li>
+                <li><a href="message-digests.html" title="Message Digesters">message digesters</a></li>
+                <li><a href="message-authentication-codes.html" title="Message Authentication Codes">message authentication codes</a></li>
                 <li>custom providers</li>
             </ul>
 
@@ -42,7 +45,7 @@ navbar:
         <div class="span4">
             <h2>Proven</h2>
 
-            <p>Our customers are online gaming companies that move significant amounts of money 24/7.
+            <p>Our customers are telcos and online gaming companies that move significant amounts of money 24/7.
                 Also, because the code is open source, you don't need to trust us: you can see for yourself if you like
                 what we do.</p>
         </div>
