--- a/setup.html
+++ b/setup.html
@@ -97,3 +97,18 @@ navbar:
         <p>This gets you full autocompletion support in an xsd aware editor such as Intellij Idea.</p>
     </div>
 </div>
+
+<hr/>
+
+<div class="row">
+    <div class="span3 columns">
+        <h3>What now?</h3>
+
+        <p>With the setup out of our way, here's what to do next.</p>
+    </div>
+    <div class="span9 columns">
+        <p>What to do next depends on your specific needs. Please go to the
+        documentation link above in the navigation bar and choose a topic of
+        your interest.</p>
+    </div>
+</div>
