Certificate docs added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ navbar:
             <ul>
                 <li><a href="keystore.html" title="Key stores">key stores</a></li>
                 <li><a href="key.html" title="Public, Private and Secret Keys">public, private and secret keys</a></li>
-                <!--<li>certificates</li>-->
+                <li><a href="certificate.html" title="Certificates">certificates</a></li>
                 <li>digital signatures with <a href="signature-s.html" title="Digital Signatures with Single Keys">single</a> and
                     <a href="signature-m.html" title="Digital Signatures with Multiple Keys">multiple keys</a></li>
                 <li><a href="symmetric-encryption.html" title="Symmetric Encryption">symmetric</a> and
