--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ navbar:
         <div class="span4">
             <h2>Simple</h2>
 
-            <p>We provide wrappers around the Java Cryptography API. Using JCA
+            <p>We provide wrappers around the <a href="http://docs.oracle.com/javase/7/docs/technotes/guides/security/crypto/CryptoSpec.html" target="_blank">Java Cryptography Architecture</a> API. Using JCA
                 goes from &laquo;I want to kill myself&raquo; to &laquo;Hey, this is actually pretty cool!&raquo;</p>
 
             <p>Not to mention the sexy documentation and the extensive unit tests.</p>
