--- a/setup.html
+++ b/setup.html
@@ -25,7 +25,7 @@ navbar:
 &lt;dependency&gt;
     &lt;groupId&gt;com.google.code.spring-crypto-utils&lt;/groupId&gt;
     &lt;artifactId&gt;spring-crypto-utils&lt;/artifactId&gt;
-    &lt;version&gt;1.3.0&lt;/version&gt;
+    &lt;version&gt;1.3.6&lt;/version&gt;
 &lt;/dependency&gt;</pre>
 
         <div class="alert alert-info">
@@ -39,7 +39,7 @@ navbar:
 
         <h2>Without maven</h2>
 
-        <p>Download <a href="http://repo1.maven.org/maven2/com/google/code/spring-crypto-utils/spring-crypto-utils/1.3.0/spring-crypto-utils-1.3.0.jar">the latest jar</a>
+        <p>Download <a href="http://repo1.maven.org/maven2/com/google/code/spring-crypto-utils/spring-crypto-utils/1.3.6/spring-crypto-utils-1.3.6.jar">the latest jar</a>
             and put the file in the classpath of your application.</p>
 
         <p>The following jars are also needed:</p>
@@ -50,27 +50,24 @@ navbar:
                     <li>commons-logging:commons-logging:jar:1.1.1
                         <a href="http://repo1.maven.org/maven2/commons-logging/commons-logging/1.1.1/commons-logging-1.1.1.jar"><span
                                 class="label label-info">download</span></a></li>
-                    <li>commons-codec:commons-codec:jar:1.6
-                        <a href="http://repo1.maven.org/maven2/commons-codec/commons-codec/1.6/commons-codec-1.6.jar"><span
+                    <li>commons-codec:commons-codec:jar:1.8
+                        <a href="http://repo1.maven.org/maven2/commons-codec/commons-codec/1.8/commons-codec-1.8.jar"><span
                                 class="label label-info">download</span></a></li>
                 </ul>
             </li>
             <li>Spring Framework
                 <ul>
-                    <li>org.springframework:spring-context:jar:3.1.2.RELEASE
-                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-context/3.1.2.RELEASE/spring-context-3.1.2.RELEASE.jar"><span
+                    <li>org.springframework:spring-context:jar:4.0.0.RELEASE
+                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-context/4.0.0.RELEASE/spring-context-4.0.0.RELEASE.jar"><span
                                 class="label label-info">download</span></a></li>
-                    <li>org.springframework:spring-beans:jar:3.1.2.RELEASE
-                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-beans/3.1.2.RELEASE/spring-beans-3.1.2.RELEASE.jar"><span
+                    <li>org.springframework:spring-beans:jar:4.0.0.RELEASE
+                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-beans/4.0.0.RELEASE/spring-beans-4.0.0.RELEASE.jar"><span
                                 class="label label-info">download</span></a></li>
-                    <li>org.springframework:spring-core:jar:3.1.2.RELEASE
-                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-core/3.1.2.RELEASE/spring-core-3.1.2.RELEASE.jar"><span
+                    <li>org.springframework:spring-core:jar:4.0.0.RELEASE
+                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-core/4.0.0.RELEASE/spring-core-4.0.0.RELEASE.jar"><span
                                 class="label label-info">download</span></a></li>
-                    <li>org.springframework:spring-expression:jar:3.1.2.RELEASE
-                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-expression/3.1.2.RELEASE/spring-expression-3.1.2.RELEASE.jar"><span
-                                class="label label-info">download</span></a></li>
-                    <li>org.springframework:spring-asm:jar:3.1.2.RELEASE
-                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-asm/3.1.2.RELEASE/spring-asm-3.1.2.RELEASE.jar"><span
+                    <li>org.springframework:spring-expression:jar:4.0.0.RELEASE
+                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-expression/4.0.0.RELEASE/spring-expression-4.0.0.RELEASE.jar"><span
                                 class="label label-info">download</span></a></li>
                 </ul>
             </li>
@@ -78,8 +75,9 @@ navbar:
 
         <h2>Xml Namespace</h2>
 
-        <p>To use the xml configuration, you will need to declare the crypt namespace
-            in your spring context xml configuration files, like this:</p>
+        <p>To use the xml configuration, you will need to declare the
+<code>crypt</code> namespace in your spring context xml configuration
+files, like this:</p>
 
                 <pre class="prettyprint">
 &lt;?xml version="1.0" encoding="UTF-8"?&gt;
