--- a/setup.html
+++ b/setup.html
@@ -57,11 +57,15 @@ navbar:
             </li>
             <li>Spring Framework
                 <ul>
-                    <li>org.springframework:spring-context:jar:4.0.0.RELEASE
-                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-context/4.0.0.RELEASE/spring-context-4.0.0.RELEASE.jar"><span
-                                class="label label-info">download</span></a></li>
+                    <li>aopalliance:aopalliance:jar:1.0
+                        <a href="http://repo1.maven.org/maven2/aopalliance/aopalliance/1.0/aopalliance-1.0.jar"><span class="label label-info">download</span></a></li>
+                    <li>org.springframework:spring-aop:jar:4.0.0.RELEASE
+                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-aop/4.0.0.RELEASE/spring-aop-4.0.0.RELEASE.jar"><span class="label label-info">download</span></a></li>
                     <li>org.springframework:spring-beans:jar:4.0.0.RELEASE
                         <a href="http://repo1.maven.org/maven2/org/springframework/spring-beans/4.0.0.RELEASE/spring-beans-4.0.0.RELEASE.jar"><span
+                                class="label label-info">download</span></a></li>
+                    <li>org.springframework:spring-context:jar:4.0.0.RELEASE
+                        <a href="http://repo1.maven.org/maven2/org/springframework/spring-context/4.0.0.RELEASE/spring-context-4.0.0.RELEASE.jar"><span
                                 class="label label-info">download</span></a></li>
                     <li>org.springframework:spring-core:jar:4.0.0.RELEASE
                         <a href="http://repo1.maven.org/maven2/org/springframework/spring-core/4.0.0.RELEASE/spring-core-4.0.0.RELEASE.jar"><span
