added pointers to bruce

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@ navbar:
 
         <p>Cryptography in Java sucks, badly. Hopefully, not any more.</p>
 
-        <p><a class="btn btn-large btn-primary" href="setup.html">Start here</a></p>
+        <p><b>Important Notice:</b> Spring Crypto Utils is now Bruce.</p>
+
+        <p><a class="btn btn-large btn-success" href="https://bruce.mirkocaserta.com">Take me to Bruce!</a>
+        <a class="btn btn-large btn-warning" href="setup.html">No, I still need Spring XML</a></p>
     </div>
 
     <div class="row">
